--- a/wp-content/themes/skelementor/style.css
+++ b/wp-content/themes/skelementor/style.css
@@ -14,6 +14,7 @@
 */
 
 /*! minimal reset based on simplified normalise.css | github.com/necolas/normalize.css */
+/* Finished header, team and proces */
 html{line-height:1.15}body{margin:0}h1{font-size:2em;margin:.67em 0}b,strong{font-weight:bolder}pre,code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}fieldset{padding:.35em .75em .625em}progress{vertical-align:baseline}textarea{overflow:auto}template,[hidden]{display:none}
 #copyright{opacity:.7;font-size:small;text-align:right;margin:.5rem}
 .alignright{float:right}
